commited with errors in grapth creation

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -55,6 +55,7 @@
             <p>&copy; 2025 Your Company Name. All rights reserved.</p>
         </div>
     </footer>
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
