--- a/weighttracker/templates/weighttracker/weighttrackerhome.html
+++ b/weighttracker/templates/weighttracker/weighttrackerhome.html
@@ -84,12 +84,13 @@
         <canvas id="weightChart" height="100"></canvas>
     </div>
     <script>
-        const labels = {{ chart_labels|safe }};
+        const labels = JSON.parse('{{ chart_labels|escapejs }}');
+        const weights = JSON.parse('{{ chart_data|escapejs }}');
         const data = {
           labels: labels,
           datasets: [{
             label: 'Weight (kg)',
-            data: {{ chart_data|safe }},
+            data: weights,
             fill: false,
             borderColor: 'rgb(75, 192, 192)',
             tension: 0.2,
