--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -23,8 +23,10 @@
         </a>
         </div>
     <div class="bg-white p-6 rounded-lg shadow">
-        <h2 class="text-xl font-semibold mb-2">Feature Two</h2>
-        <p class="text-gray-600">Description of the second awesome feature.</p>
+        <a href="{% url 'quizmakerhome' %}">
+            <h2 class="text-xl font-semibold mb-2">Quiz Make</h2>
+            <p class="text-gray-600">This app allows you to make a quick pratice Quiz.</p>
+        </a>
     </div>
     <div class="bg-white p-6 rounded-lg shadow">
         <h2 class="text-xl font-semibold mb-2">Feature Three</h2>
